Bug 282319 - Empty Unremovable Keyword
Summary: Empty Unremovable Keyword
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Usability-Keyboard (other bugs)
Version First Reported In: 2.1.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-19 04:27 UTC by Johannes Schmidt
Modified: 2017-08-15 21:40 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 2.2.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Johannes Schmidt 2011-09-19 04:27:52 UTC
Version:           2.1.0 (using KDE 4.7.1) 
OS:                Linux

After Face Recognition (possibly after deleting the created "People" Keyword there seems to be an empty keyword wich can not be removed via the context Menu "delete Keywords". Though no keywords are shown under the image thumbnail the "delete keywords" entry is not greyed out.

This is annoying because the images which have this problem are not shown when the filter "without keywords" is applied although the have no keywords.

Reproducible: Always

Steps to Reproduce:
1. Scan a album for faces
2. Delete the created "people" keyword in the keyword editor
3. apply the filter "without keywords" to the album
4. try to delete the keyword via context menu


Actual Results:  
a. the filter shows nothing, everything seems to be keyworded though it's not
b. the "delete keyword" entry in the context menu is not greyed out and when you hover over it ther is no submenu coming up

Expected Results:  
a. the images are all shown as the do not have a keyword anymore
b. the entry is greyed out
Comment 1 Marcel Wiesweg 2011-09-22 20:51:21 UTC
Git commit e93040ee2573ec20a86be5aea042d39f1f7c9292 by Marcel Wiesweg.
Committed on 22/09/2011 at 22:15.
Pushed by mwiesweg into branch 'master'.

Disable Remove Tags menu when no tags are assigned, excluding assigned internal tags

Ensure that internal tags are ignored.
For performance reasons, the disabling is done "on demand" when hovering
the submenu entry, not when showing the context menu.

CCBUG: 282319

M  +19   -7    digikam/tags/tagspopupmenu.cpp

http://commits.kde.org/digikam/e93040ee2573ec20a86be5aea042d39f1f7c9292
Comment 2 Marcel Wiesweg 2011-09-22 20:51:21 UTC
Git commit 9ac04a2a3724f11e53219004c210f088c914c04d by Marcel Wiesweg.
Committed on 22/09/2011 at 22:50.
Pushed by mwiesweg into branch 'master'.

Fix not-tagged filter, ignore internal tags

Filtering is based on lookup in a cached QSet, so very fast.
BUG: 282319

M  +4    -1    NEWS
M  +1    -1    libs/models/imagefiltersettings.cpp

http://commits.kde.org/digikam/9ac04a2a3724f11e53219004c210f088c914c04d