Fix not-tagged filter, ignore internal tags

Filtering is based on lookup in a cached QSet, so very fast.
BUG: 282319